# AI_Traditional_Chinese_Medicine_Expert

./: .gitignore  BACKUP_GUIDE.md  LICENSE  OLLAMA_TEST_GUIDE.md  README.md  RELEASE_CHECKLIST.md  TCMExpert.spec  USER_GUIDE.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
installer/: TCMExpert.iss
scripts/: build.ps1  check.ps1  create_demo_database.py  run.ps1  setup.ps1
tests/: test_ai_workflow.py  test_audio_analysis.py  test_clinical_decision_support.py  test_config.py  test_database.py  test_doctor_formulas.py  test_epic17_workflow.py  test_epic18_providers.py  test_epic19_clinical_workflow.py  test_epic20_ai_safety.py  test_epic21_followup.py  test_epic22_outcome_reports.py  test_epic23_appointments.py  test_epic24_appointment_reminders.py  test_epic25_dashboard.py  test_epic26_users.py  test_epic27_audit.py  test_epic28_backup.py  test_epic29_classic_formulas.py  test_epic30_ollama_translation.py  test_epic30_prescription_catalog.py  test_epic31_materia_medica.py  test_epic33_formula_herb_links.py  test_epic34_ai_diagnosis.py  test_epic35_formula_gate.py  test_epic36_ollama_diagnosis.py  test_epic37_admin_recovery.py  test_epic37_four_examination_flow.py  test_epic37_multi_positions.py  test_epic37_ollama_formulas.py  test_epic37_startup_permissions.py  test_epic38_ollama_tongue.py  test_epic38_patient_visit_link.py  test_formula_recommender.py  test_formula_repository.py  test_paths.py  test_patient_birth_date_input.py  test_prescription_repository.py  test_release_readiness.py  test_tongue_analysis.py  (+1 more)
(+71 files in other folders)
