[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-traditional-chinese-medicine-expert"
version = "2.9.9"
description = "Clinical decision-support foundation for Traditional Chinese Medicine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["PySide6>=6.8,<7", "Pillow>=11,<13"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=6", "ruff>=0.9"]

[project.scripts]
tcm-expert = "tcm_expert.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
